[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medsplex"
version = "0.1.0"
description = "TBD: descrption goes here"
authors = [
    { name = "Isotta Landi", email = "landi.isotta@gmail.com" },
    { name = "Nicole Bussola", email = "nicole.bussolaceradini@gmail.com" },
    { name = "Eugenia Alleva", email = "eugeniaalessandrae.allevabonomi@mssm.edu" },
    { name = "Ernesto Arbitrio", email = "ernesto.arbitrio@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "pydantic==2.11.7",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "black==25.1.0",
    "isort==6.0.1",
    "mypy==1.17.0",
    "flake8==7.3.0",
    "pylint==3.3.7",
    "pre-commit==4.2.0",
]

[tool.setuptools]
packages = ["medsplex"]
